# Leptos-CRUD

./: Cargo.toml  README.md  index.html
src/: main.rs
src/components/: todo_list.rs
src/models/: todo.rs
styles/: main.scss
