[package]
name = "leptos-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.5", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "js"] }
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
gloo-storage = "0.3"